content desc changed

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="SkySpaces - User owned digital spaces to store and manage Personal, Social and Public content. Secure content storage and delivery is powered by Sia Skynet."
+      content="SkySpaces - Own Your Space. Skapp to store and manage your Content, Services and Interactions"
     />
+    <!--
+    content="SkySpaces - User owned digital spaces to store and manage Personal, Social and Public content. Secure content storage and delivery is powered by Sia Skynet."
+    --> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!--
