--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,13 @@
     -->
     <title>SkySpaces</title>
     <script async defer data-domain="skyspaces.io" src="https://plausible.io/js/plausible.js"></script>
+    <script src="https://siasky.net/hns/sky-id/skyid.js">
+      if (window.location.hostname == 'idtest.local' || window.location.hostname == 'localhost' || window.location.protocol == 'file:') {
+        var devMode = true
+      } else {
+        var devMode = false
+      }
+    </script>
 <!--     <script>
     console.log = function () {};
     </script> -->
