skyid and syncdata

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       if (window.location.hostname == 'idtest.local' || window.location.hostname == 'localhost' || window.location.protocol == 'file:') {
         var devMode = true
       } else {
-        var devMode = false
+        var devMode = true
       }
     </script>
 <!--     <script>
